Bug #55378: improve cookie banner usability
Long texts in the cookie banner will no longer push the accept
button out of the screen. This was a problem especially on
mobile devices where in some cases it was not possible to
reach the button anymore.

This commit fixes umc cookie banners (univention-web).
Portal cookie banners (univention-portal) have been fixed
in commit f71de60bb6b4

--- a/management/univention-web/css/CookieBanner.styl
+++ b/management/univention-web/css/CookieBanner.styl
@@ -5,43 +5,35 @@
 .umc .dijitDialog.umcCookieBanner
 	position: fixed !important
 	top: auto !important
-	left: 0 !important
-	bottom: 0 !important
-	right: 0 !important
-	width: 100%
+	bottom: 4px !important
+	left: 4px !important
+	right: 4px !important
 	max-width: 100%
+	max-height: 60%
+	display: flex
+	flex-direction: column
 
 	.umcText
 		font-size 13pt
 
-	.dijitDialogTitleBar,
 	.dijitDialogPaneContent
-		padding-left 30px
-		padding-right 30px
+		padding-left 20px
+		padding-right 20px
+		padding-top 10px
+		padding-bottom 10px
+		margin-bottom unset
+		overflow auto
 
 	.dijitDialogTitleBar
-		padding-top 30px
-		padding-bottom 5px
+		border-bottom thin solid var(--bgc-content-body)
+		padding-top 10px
+		padding-bottom 10px
 
 		.dijitDialogTitle
 			font-size 16pt
 
-	.dijitDialogPaneContent
-		padding-top 5px
-		padding-bottom 40px
-
-		@media (min-width: $dialog-max-width)
-			display table
-
-			.umcContainerWidget
-				display table-row
-
-				.umcText,
-				.umcButtonRow
-					display table-cell
-
-				.umcButtonRow
-					padding-left 30px
+	.umcDialogActionBar
+		overflow unset
 
 		.umcContainerWidget .umcButtonRow
 			vertical-align bottom
